[package]
name = "steganer"
version = "1.0.0"
authors = ["dante-signal31 <dante.signal31@gmail.com>"]
edition = "2018"
description = "Crate to hide a file inside another... or to recover it."
license = "BSD-3-Clause-Attribution"
license-file = "license.txt"
homepage = "https://github.com/dante-signal31/steganer"

[lib]
name = "steganer"
path = "src/lib.rs"

[[bin]]
name = "steganer"
path = "src/bin/main.rs"

[dependencies]
bitreader = "0.3.1"
clap = "2.33.0"
error-chain = "0.12.1"
image = "0.21.0"
num = "0.2.0"

[dev-dependencies]
byteorder = "1.3.1"
test_common = {path = "test_common"}