[package]
name = "steganer"
version = "1.0.4.post1"
authors = ["dante-signal31 <dante.signal31@gmail.com>"]
edition = "2018"
description = "Library to hide a file inside another... or to recover it."
license-file = "LICENSE"
homepage = "https://github.com/dante-signal31/steganer"

[lib]
name = "steganer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "steganer"
path = "src/bin/main.rs"

[dependencies]
bitreader = "0.3.1"
clap = "2.33.0"
error-chain = "0.12.1"
image = "0.21.0"
num = "0.2.0"

[dependencies.pyo3]
version = "0.7.0"
features = ["extension-module"]

[dev-dependencies]
byteorder = "1.3.1"
test_common = "1.0.1"
pyo3-pack = "0.6.1"

