[package]
name = "steganer"
version = "1.1.0-post4"
authors = ["dante-signal31 <dante.signal31@gmail.com>"]
edition = "2018"
description = "Library to hide a file inside another... or to recover it."
license = "BSD-3-Clause"
homepage = "https://github.com/dante-signal31/steganer"

[lib]
name = "steganer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "steganer"
path = "src/bin/main.rs"

[dependencies]
bitreader = "0.3.1"
clap = "2.33.0"
error-chain = "0.12.1"
image = "0.21.0"
num = "0.2.0"

[dependencies.pyo3]
version = "0.8.1"
features = ["extension-module"]

[dev-dependencies]
byteorder = "1.3.1"
test_common = "1.0.1"
pyo3-pack = "0.7.0"

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/release/steganer", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/steganer/", "644"],
    ["man/steganer.1.gz", "usr/share/man/man1/", "644"],]

[package.metadata.rpm]
buildflags = ["--release"]

[package.metadata.rpm.targets]
steganer = { path = "/usr/bin/steganer" }
